Fix contrast

--- a/public/style.css
+++ b/public/style.css
@@ -17,7 +17,7 @@ h1 {
 }
 
 a {
-  color: #0080ff;
+  color: #0050ff;
   text-decoration: none;
 }
 
@@ -26,7 +26,7 @@ a:hover {
 }
 
 a:visited {
-  color: #cc55ff;
+  color: #9910ff;
 }
 
 ul li {
